--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -1,10 +1,19 @@
 
 <section class="login">
-  <v-btn @click="login">
-    <v-icon left>
-      cake
-    </v-icon>
-    Login with google
-  </v-btn>
+    <v-parallax
+   
+    src="@/assets/bot.jpg"
+  >
+  
+      </v-parallax>
+      <!--v-btn @click="login" class="center">
+      <v-icon left>
+        cake
+      </v-icon>
+      Redirect To 3Bot
+    </v-btn-->
+    <div class='container'>
+      <span @click="login" class='pulse-button'>Sign in</span>
+    </div>
+  
 </section>
-
