--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -1,19 +1,5 @@
-
 <section class="login">
-    <v-parallax
-   
-    src="@/assets/bot.jpg"
-  >
-  
-      </v-parallax>
-      <!--v-btn @click="login" class="center">
-      <v-icon left>
-        cake
-      </v-icon>
-      Redirect To 3Bot
-    </v-btn-->
-    <div class='container'>
-      <span @click="login" class='pulse-button'>Sign in</span>
-    </div>
-  
+  <v-btn large class="accent" @click="login">
+    Click here to authenticate
+  </v-btn>
 </section>
