--- a/src/views/profile/profile.html
+++ b/src/views/profile/profile.html
@@ -8,7 +8,8 @@
     <v-form>
       <v-card-text>
         <v-layout column>
-          <p>Hi {{this.$route.params.user}}</p>
+          <p>Hi {{user.name}}</p>
+          <p>{{user.email}}</p>
         </v-layout>
       </v-card-text>
     </v-form>
