--- a/src/views/profile/profile.html
+++ b/src/views/profile/profile.html
@@ -10,6 +10,7 @@
         <v-layout column>
           <p>Hi {{user.name}}</p>
           <p>{{user.email}}</p>
+          <p>{{user}}</p>
         </v-layout>
       </v-card-text>
     </v-form>
